<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructions"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/questions_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1_text" />

                <CheckBox
                    android:id="@+id/q1_check_box_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_check_box_a_text" />

                <CheckBox
                    android:id="@+id/q1_check_box_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_check_box_b_text" />

                <CheckBox
                    android:id="@+id/q1_check_box_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_check_box_c_text" />

                <CheckBox
                    android:id="@+id/q1_check_box_d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_check_box_d_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/questions_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_text" />

                <RadioGroup
                    android:id="@+id/q2_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/q2_radio_button_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q2_radio_button_a_text" />

                    <RadioButton
                        android:id="@+id/q2_radio_button_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q2_radio_button_b_text" />

                    <RadioButton
                        android:id="@+id/q2_radio_button_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q2_radio_button_c_text" />

                    <RadioButton
                        android:id="@+id/q2_radio_button_d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q2_radio_button_d_text" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/questions_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_3_text" />

                <EditText
                    android:id="@+id/q3_free_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/questions_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_4_text" />

                <CheckBox
                    android:id="@+id/q4_check_box_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_check_box_a_text" />

                <CheckBox
                    android:id="@+id/q4_check_box_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_check_box_b_text" />

                <CheckBox
                    android:id="@+id/q4_check_box_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_check_box_c_text" />

                <CheckBox
                    android:id="@+id/q4_check_box_d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_check_box_d_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/questions_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_5_text" />

                <RadioGroup
                    android:id="@+id/q5_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/q5_radio_button_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q5_radio_button_a_text" />

                    <RadioButton
                        android:id="@+id/q5_radio_button_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q5_radio_button_b_text" />

                    <RadioButton
                        android:id="@+id/q5_radio_button_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q5_radio_button_c_text" />

                    <RadioButton
                        android:id="@+id/q5_radio_button_d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q5_radio_button_d_text" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/questions_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_6_text" />

                <EditText
                    android:id="@+id/q6_free_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/questions_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_7_text" />

                <CheckBox
                    android:id="@+id/q7_check_box_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q7_check_box_a_text" />

                <CheckBox
                    android:id="@+id/q7_check_box_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q7_check_box_b_text" />

                <CheckBox
                    android:id="@+id/q7_check_box_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q7_check_box_c_text" />

                <CheckBox
                    android:id="@+id/q7_check_box_d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q7_check_box_d_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/questions_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_8_text" />

                <RadioGroup
                    android:id="@+id/q8_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/q8_radio_button_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q8_radio_button_a_text" />

                    <RadioButton
                        android:id="@+id/q8_radio_button_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q8_radio_button_b_text" />

                    <RadioButton
                        android:id="@+id/q8_radio_button_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q8_radio_button_c_text" />

                    <RadioButton
                        android:id="@+id/q8_radio_button_d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q8_radio_button_d_text" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/questions_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_9_text" />

                <EditText
                    android:id="@+id/q9_free_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/questions_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_10_text" />

                <CheckBox
                    android:id="@+id/q10_check_box_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q10_check_box_a_text" />

                <CheckBox
                    android:id="@+id/q10_check_box_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q10_check_box_b_text" />

                <CheckBox
                    android:id="@+id/q10_check_box_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q10_check_box_c_text" />

                <CheckBox
                    android:id="@+id/q10_check_box_d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q10_check_box_d_text" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textSize="16sp"
            android:onClick="gradeTest"
            android:text="@string/submit" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textSize="16sp"
            android:onClick="reset"
            android:text="@string/reset" />

    </RelativeLayout>
</ScrollView>